refactor(benchmark): use Wei.ZERO constant in SignerBenchmark [REVIEW7-1.1]